# aoc

./: .clang-tidy  .gitignore  meson.build
data/2022/: day11.txt
subprojects/aoc-2022/: meson.build
subprojects/aoc-2022/include/aoc/2022/: day01.h  day01.hh  day02.h  day02.hh  day03.h  day03.hh  day04.h  day05.h  day06.h  day07.h  day_factory.h
subprojects/aoc-2022/src/: main.cc
subprojects/aoc-2022/src/aoc/2022/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day_factory.cc
subprojects/aoc-2022/tests/: meson.build  test_aoc_2022_day01.cc  test_aoc_2022_day02.cc  test_aoc_2022_day03.cc  test_aoc_2022_day04.cc  test_aoc_2022_day05.cc  test_aoc_2022_day06.cc  test_aoc_2022_day07.cc
subprojects/aoc-2024/: meson.build
subprojects/aoc-2024/include/aoc/2024/: day01.h  day01.hh  day02.h  day03.h  day04.h  day_factory.h
subprojects/aoc-2024/src/: main.cc
subprojects/aoc-2024/src/aoc/2024/: day01.cc  day02.cc  day03.cc  day04.cc  day_factory.cc
subprojects/aoc-2024/tests/: meson.build  test_aoc_2024_day01.cc  test_aoc_2024_day02.cc  test_aoc_2024_day03.cc  test_aoc_2024_day04.cc
subprojects/aoc-common/: meson.build
subprojects/aoc-common/include/aoc/common/: day.h  day.hh  file_puzzle_reader.hh  puzzle_reader.hh
subprojects/aoc-common/include/aoc/common/cli/: cli_arguments.h  parser.h
subprojects/aoc-common/include/aoc/common/coordinates/: bbox.h  point.h
subprojects/aoc-common/include/aoc/common/puzzle/: puzzle.h  puzzle_file_reader.h  puzzle_reader.h  puzzle_reader_factory.h
subprojects/aoc-common/include/aoc/common/range/: range.h  rangeset.h
subprojects/aoc-common/src/aoc/common/: file_puzzle_reader.cc
subprojects/aoc-common/src/aoc/common/cli/: parser.cc
subprojects/aoc-common/src/aoc/common/puzzle/: puzzle_file_reader.cc  puzzle_reader_factory.cc
subprojects/aoc-common/src/aoc/common/range/: range.cc  rangeset.cc
subprojects/aoc-libcommon/: .gitignore  meson.build
subprojects/aoc-libcommon/include/aoc/common/: common.hh  file_puzzle_reader.hh  puzzle_reader.hh
subprojects/aoc-libcommon/src/aoc/common/: file_puzzle_reader.cc
